osek/test/FreeOSEK/Error/Test_Sequence_02/test.oil
//OSEK OSEK {

OS	ExampleOS {
	STATUS = EXTENDED;
	PRETASKHOOK = FALSE;
	POSTTASKHOOK = FALSE;
   STARTUPHOOK = FALSE;
   ERRORHOOK = FALSE;
   SHUTDOWNHOOK = TRUE;
	MEMMAP = FALSE;
	USERESSCHEDULER = FALSE;
};

TASK Task1 {
   PRIORITY = 1;
   SCHEDULE = FULL;
   ACTIVATION = 1;
   AUTOSTART = TRUE {
		APPMODE = OSDEFAULTAPPMODE;
	};
	STACK = 256;
	TYPE = BASIC;
};

//APPMODE AppMode1;

//};
